unpackaged/main/default/objects/Validation_Practice__c/Validation_Practice__c.object-meta.xml
<CustomObject>
    <label>Validation Practice</label>
    <nameField>
        <label>Validation Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validation Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>