unpackaged/main/default/objects/Validation_Practice__c/fields/Mix_pct__c.field-meta.xml
<CustomField>
    <fullName>Mix_pct__c</fullName>
    <label>Mix_pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>