unpackaged/main/default/objects/Validation_Practice__c/fields/My_Integer__c.field-meta.xml
<CustomField>
    <fullName>My_Integer__c</fullName>
    <label>My Integer</label>
    <length>3</length>
    <type>Text</type>
</CustomField>