unpackaged/main/default/objects/Validation_Practice__c/fields/Salary_Min__c.field-meta.xml
<CustomField>
    <fullName>Salary_Min__c</fullName>
    <label>Salary Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>