unpackaged/main/default/objects/Validation_Practice__c/fields/Weekdays__c.field-meta.xml
<CustomField>
    <fullName>Weekdays__c</fullName>
    <label>Weekdays</label>
    <type>Date</type>
</CustomField>