unpackaged/main/default/objects/Validation_Practice__c/validationRules/Begin_Date_15.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_15</fullName>
    <active>false</active>
    <errorConditionFormula>DAY(Begin_Date__c) &gt; 15</errorConditionFormula>
    <errorDisplayField>Begin_Date__c</errorDisplayField>
    <errorMessage>Begin Date must be 1 to15</errorMessage>
</ValidationRule>