unpackaged/main/default/objects/Validation_Practice__c/validationRules/Begin_Date_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Begin_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Must be after Begin date</errorMessage>
</ValidationRule>