unpackaged/main/default/objects/Validation_Practice__c/validationRules/Username_cannot_mohit_32.validationRule-meta.xml
<ValidationRule>
    <fullName>Username_cannot_mohit_32</fullName>
    <active>false</active>
    <errorConditionFormula>IF(Name = &#39;mohit&#39;,TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Username cannot be mohit</errorMessage>
</ValidationRule>