unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_at_sun_11.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_at_sun_11</fullName>
    <active>false</active>
    <errorConditionFormula>AND( WEEKDAY(  Weekdays__c  ) &lt;&gt; 1  , WEEKDAY(  Weekdays__c  )  &lt;&gt; 7 )</errorConditionFormula>
    <errorDisplayField>Weekdays__c</errorDisplayField>
    <errorMessage>The date must be a Saturday or Sunday.</errorMessage>
</ValidationRule>