unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Integer_13.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Integer_13</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER(My_Integer__c))</errorConditionFormula>
    <errorMessage>The My Integer Field only accept Integer Value!.</errorMessage>
</ValidationRule>