unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Mix_pct_16.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Mix_pct_16</fullName>
    <active>false</active>
    <errorConditionFormula>OR(Mix_pct__c &gt; 1.0,
 Mix_pct__c &lt; 0.0)</errorConditionFormula>
    <errorMessage>Enter mix_pct B/w 1 To 100.</errorMessage>
</ValidationRule>