unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Multiple_of_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Multiple_of_5</fullName>
    <active>true</active>
    <errorConditionFormula>MOD( Volume__c , 5) &lt;&gt; 0</errorConditionFormula>
    <errorDisplayField>Volume__c</errorDisplayField>
    <errorMessage>Volume must be multiple of 5</errorMessage>
</ValidationRule>