unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_oldRecords_35.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_oldRecords_35</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() = FALSE</errorConditionFormula>
    <errorMessage>Old Records Only</errorMessage>
</ValidationRule>