unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Percent_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Percent_20</fullName>
    <active>false</active>
    <errorConditionFormula>OR( Discount__c &lt; 0.1, Discount__c &gt; 0.4)</errorConditionFormula>
    <errorMessage>Discount must be B/W 0% TO 40%</errorMessage>
</ValidationRule>