unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_rules_newRecord_34.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_rules_newRecord_34</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() = TRUE</errorConditionFormula>
    <errorMessage>New Record Only</errorMessage>
</ValidationRule>