unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Salary_15.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Salary_15</fullName>
    <active>false</active>
    <errorConditionFormula>( Salary_Max__c  -  Salary_Min__c ) &gt; 20000</errorConditionFormula>
    <errorMessage>Salary Range Must me Between 0 to 20000</errorMessage>
</ValidationRule>