unpackaged/main/default/objects/Validation_Practice__c/validationRules/Validate_Volume_14.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Volume_14</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 Volume__c  &gt; 50,
 Volume__c &lt;-50
)</errorConditionFormula>
    <errorMessage>The Volume Range Must be between -50 to 50.</errorMessage>
</ValidationRule>