unpackaged/main/default/objects/Validation_Practice__c/validationRules/weekday_Sat_17.validationRule-meta.xml
<ValidationRule>
    <fullName>weekday_Sat_17</fullName>
    <active>false</active>
    <errorConditionFormula>WEEKDAY(  Weekdays__c  ) = 7</errorConditionFormula>
    <errorDisplayField>Weekdays__c</errorDisplayField>
    <errorMessage>Weekday cannot be Saturday</errorMessage>
</ValidationRule>