unpackaged/main/default/objects/Validation_Practice__c/validationRules/weekday_Sun_17.validationRule-meta.xml
<ValidationRule>
    <fullName>weekday_Sun_17</fullName>
    <active>false</active>
    <errorConditionFormula>WEEKDAY(Weekdays__c) = 1</errorConditionFormula>
    <errorDisplayField>Weekdays__c</errorDisplayField>
    <errorMessage>Weekday cannot be Sun</errorMessage>
</ValidationRule>